// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`constructLine > ansi colors 1`] = `
<div>
  <span
    style="font-weight: bold; color: rgb(0, 204, 255);"
  >
    options(crayon.enabled = TRUE)
  </span>
</div>
`;

exports[`constructLine > error 1`] = `
<div>
  <span
    style="color: rgb(255, 83, 83);"
  >
    Error message
  </span>
</div>
`;

exports[`constructLine > lineWithTimestamp 1`] = `
<div>
  <span>
    <span>
      <time
        datetime="2022-01-01T22:00"
      >
        2022-01-01T22:00
      </time>
    </span>
    <span>
      hello world
    </span>
  </span>
</div>
`;
